Improved look and style.
No change in functionality.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <ul>
       <li>HTML is working.</li>
-      <li><span class="css-test">CSS is</span> <span>broken.</span></li>
+      <li>CSS is <span class="css-test">broken.</span><span></span></li>
       <li>TypeScript is <span id="typescriptStatus">broken</span>.</li>
       <li>
         <a href="https://tradeideasphilip.github.io/typescript-getting-started/"
